--- a/4._jQuery/2._jQuery_Exercises/index.html
+++ b/4._jQuery/2._jQuery_Exercises/index.html
@@ -13,6 +13,7 @@
         ul {
             list-style-position: inside;
         }
+
     </style>
 </head>
 <body>
@@ -79,7 +80,8 @@
     12. Add a paragraph that says "Second Sentence".
     13. After finishing 12 add a paragraph before it that says "First Sentence".
     14. You can finally change the class name of unused-box to used-box.
-    15. You know what. Let's additionally add a class name on the box called used-boxed-clicked. Every time the box is clicked it should toggle this class (add if not there or remove if there).
+    15. You know what. Let's additionally add a class name on the box called used-boxed-clicked.
+    //Every time the box is clicked it should toggle this class (add if not there or remove if there).
 
     Button, Event-handling
     16. On mousing over the submit-button add a title property that says "You're ready to click." Remove the text when the mouse isn't over the button anymore.
@@ -97,5 +99,9 @@
         Place second-list to the right of the previously list.
         Place the button group at the lower right of the page.
      -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./index.js"></script>
+
 </body>
 </html>
