Implemented the GET request version of the form submit

--- a/5._KeaBriefcase/public/upload/upload.html
+++ b/5._KeaBriefcase/public/upload/upload.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./upload/upload.css">
+    <link rel="stylesheet" href="./global.css">
     <title>Upload</title>
 </head>
 <body>
+
+    <a id="logo" href="/"><img id="logo-img" src="../assets/briefcaselogo.png"/></a>
     <h1>Upload</h1>
+
+    <div id="form">
+        <textarea id="form-message" cols="30" rows="10"></textarea>
+        <button id="form-submit" onclick="handleFormSubmitted()">Done</button>
+    </div>
+
+
+
+    <footer id="footer"><div id="footer-copyright"></div></footer>
 
     <script src="./upload/upload.js"></script>
 </body>
