--- a/5._KeaBriefcase/public/upload/upload.html
+++ b/5._KeaBriefcase/public/upload/upload.html
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./upload/upload.css">
     <link rel="stylesheet" href="./global.css">
-    <title>Upload</title>
+    <title>Kea Briefcase</title>
 </head>
 <body>
 
