--- a/5._KeaBriefcase/public/footer/footer.html
+++ b/5._KeaBriefcase/public/footer/footer.html
@@ -3,7 +3,7 @@
         <a href="/about"><button>Info</button></a>
     </footer>
 
-    <script src="./footer/footer.js"></script>
+    <script src="/footer/footer.js"></script>
 
     </body>
 </html>
