--- a/5._KeaBriefcase/public/upload/upload.html
+++ b/5._KeaBriefcase/public/upload/upload.html
@@ -1,13 +1,8 @@
+<h1>Upload</h1>
 
+<textarea id="form-message" cols="30" rows="10" name="message"></textarea>
+<button onclick="validateForm()" id="form-submit" type="submit">Done</button>
 
-    <h1>Upload</h1>
-
-    <form action="/form" method="POST" onsubmit="validateForm(); return false;">
-        <textarea id="form-message" cols="30" rows="10" name="message"></textarea>
-        <button onclick="window.location.href='/about'" id="form-submit" type="submit">Done</button>
-    </form>
-
-
-    <script src="./upload/upload.js"></script>
+<script src="./upload/upload.js"></script>
 
 
