Implemented the fetch in the download page

--- a/5._KeaBriefcase/public/download/download.html
+++ b/5._KeaBriefcase/public/download/download.html
@@ -1,5 +1,5 @@
 <h1>Download</h1>
 
-<div id="message">This is a hardcoded message but it should be a custom message</div>
+<div id="message"></div>
 
 <script src="./download.js"></script>
