--- a/5._KeaBriefcase/public/upload/upload.html
+++ b/5._KeaBriefcase/public/upload/upload.html
@@ -1,6 +1,7 @@
 <h1>Upload</h1>
 
 <textarea id="form-message" cols="100" rows="10" name="message"></textarea>
+<input id="form-file" type="file" name="file" >
 <button onclick="validateForm()" id="form-submit" type="submit">Done</button>
 
 <script src="./upload/upload.js"></script>
