--- a/5._KeaBriefcase/public/upload/upload.html
+++ b/5._KeaBriefcase/public/upload/upload.html
@@ -3,7 +3,7 @@
 <form id="form-upload">
     <textarea id="form-message" cols="100" rows="10" name="message"></textarea>
     <input id="form-file" type="file" name="file" >
-    <button onclick="validateForm()" id="form-submit" type="submit">Done</button>
+    <button onclick="validateForm()" id="form-submit" type="button">Done</button>
 </form>
 
 <script src="./upload/upload.js"></script>
